--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "lint-staged": {
     "src/**/*.+(ts|tsx)": [
-      "eslint --fix"
+      "next lint --fix"
     ]
   },
   "dependencies": {
