--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --max-warnings=0"
+    "lint": "next lint --max-warnings=0",
+    "test": "jest"
   },
   "lint-staged": {
     "src/**/*.+(ts|tsx)": [
-      "next lint --fix"
+      "eslint --fix"
     ]
   },
   "dependencies": {
@@ -26,10 +27,14 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^29.2.6",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "eslint-plugin-react": "^7.32.1",
     "husky": "^8.0.3",
+    "jest": "^29.4.0",
+    "jest-environment-jsdom": "^29.4.0",
     "lint-staged": "^13.1.0"
   }
 }
