--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint --max-warnings=0",
     "test": "jest",
     "test:watch": "yarn test --watch",
+    "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook -s ./public"
   },
   "lint-staged": {
     "src/**/*.+(ts|tsx)": [
@@ -55,6 +56,7 @@
     "jest": "^29.4.0",
     "jest-environment-jsdom": "^29.4.0",
     "jest-styled-components": "^7.1.1",
-    "lint-staged": "^13.1.0"
+    "lint-staged": "^13.1.0",
+    "plop": "^3.1.1"
   }
 }
